--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "discord.js": "14.13.0",
     "dotenv": "^16.3.1",
-    "earthmc": "^8.2.1",
+    "earthmc": "^8.3.0",
     "firebase": "10.3.1",
     "firebase-admin": "^11.10.1",
     "koyeb.js": "^4.2.3",
@@ -16,8 +16,8 @@
     "moment": "^2.29.4",
     "striptags": "^3.2.0",
     "tslib": "^2.6.2",
-    "undici": "^5.26.2",
-    "tsx": "latest"
+    "tsx": "latest",
+    "undici": "^5.26.2"
   },
   "scripts": {
     "compile": "rimraf dist && tsc",
