--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "striptags": "^3.2.0",
     "tslib": "latest",
     "tsx": "latest",
-    "undici": "latest"
+    "undici": "5.28.4"
   },
   "scripts": {
     "compile": "rimraf dist && tsc",
@@ -40,6 +40,8 @@
   },
   "trustedDependencies": [
     "protobufjs",
-    "esbuild"
+    "esbuild",
+    "rimraf",
+    "tsx"
   ]
 }
