--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "start-js": "bun run compile && node ./dist/index.js",
     "start": "tsx index.ts",
     "reload": "pm2 startOrGracefulReload --attach ecosystem.json",
-    "deploy": "pm2 startOrRestart ecosystem.json --env production",
-    "setup": "pm2 deploy production"
+    "restart": "pm2 startOrRestart ecosystem.json --env production",
+    "deploy": "pm2 deploy production"
   },
   "engines": {
     "node": ">=16.20.2",
