--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "discord.js": "14.13.0",
     "dotenv": "^16.4.5",
-    "earthmc": "^8.3.4",
+    "earthmc": "9.2.0",
     "firebase": "latest",
     "firebase-admin": "latest",
     "koyeb.js": "^4.2.3",
