--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.49.0",
+    "eslint-plugin-named-import-spacing": "^1.0.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
   },
