--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "discord.js": "14.13.0",
     "dotenv": "^16.4.5",
-    "earthmc": "9.3.1",
+    "earthmc": "9.3.3",
     "firebase": "latest",
     "firebase-admin": "latest",
     "koyeb.js": "^4.2.3",
@@ -25,7 +25,7 @@
     "start-js": "bun run compile && node ./dist/index.js",
     "start": "tsx index.ts",
     "reload": "pm2 startOrGracefulReload --attach ecosystem.json",
-    "restart": "pm2 startOrRestart ecosystem.json",
+    "restart": "bun run reinstall && pm2 startOrRestart ecosystem.json",
     "deploy": "pm2 deploy production"
   },
   "engines": {
