--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "deploy": "pm2 deploy production"
   },
   "dependencies": {
+    "@isaacs/ttlcache": "^1.4.1",
     "discord.js": "14.13.0",
     "dotenv": "^16.4.5",
     "earthmc": "9.3.4",
-    "firebase": "latest",
-    "firebase-admin": "latest",
-    "koyeb.js": "^4.2.3",
-    "memory-cache": "0.2.0",
+    "firebase": "10.12.3",
+    "firebase-admin": "12.2.0",
     "moment": "^2.29.4",
     "striptags": "^3.2.0",
     "tslib": "latest",
