--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "reinstall": "rimraf node_modules && bun install",
     "start-js": "bun run compile && node ./dist/index.js",
     "start": "tsx index.ts",
+    "stop": "pm2 stop EMCS",
     "reload": "pm2 startOrGracefulReload --attach ecosystem.json",
     "restart": "bun run reinstall && pm2 startOrRestart ecosystem.json",
     "deploy": "pm2 deploy production"
@@ -18,7 +19,7 @@
     "@isaacs/ttlcache": "^1.4.1",
     "discord.js": "14.13.0",
     "dotenv": "^16.4.5",
-    "earthmc": "9.6.0",
+    "earthmc": "9.7.0",
     "firebase": "10.12.3",
     "firebase-admin": "12.2.0",
     "moment": "^2.29.4",
