--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "importHelpers": true,
         "skipDefaultLibCheck": true,
         "skipLibCheck": true,
+        "noImplicitAny": true,
         "outDir": "dist",
         "types": ["node"],
         "paths": {
