--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "stop": "pm2 stop EMCS",
     "reload": "pm2 startOrGracefulReload --attach ecosystem.json",
     "restart": "bun run reinstall && pm2 startOrRestart ecosystem.json",
+    "watch": "pm2 start --attach ecosystem.json --watch",
     "deploy": "pm2 deploy production"
   },
   "dependencies": {
