--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,8 @@
         }
     },
     "exclude": [
-        "node_modules",
         "dist",
-        "bot/archive",
-        "bot/archive/nova",
-        "bot/archive/nova/commands",
-        "bot/archive/nova/commands/**"
+        "node_modules",
+        "bot/archive"
     ],
 }
