--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@isaacs/ttlcache": "^1.4.1",
     "discord.js": "14.13.0",
     "dotenv": "^16.4.5",
-    "earthmc": "^9.9.1",
+    "earthmc": "9.10.0",
     "firebase": "10.12.4",
     "firebase-admin": "12.2.0",
     "moment": "2.30.1",
