--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "dependencies": {
     "@isaacs/ttlcache": "^1.4.1",
-    "discord.js": "14.15.0",
+    "discord.js": "14.18.0",
     "dotenv": "^16.4.7",
-    "earthmc": "^10.0.3",
-    "firebase": "11.4.0",
+    "earthmc": "^10.1.2",
+    "firebase": "11.5.0",
     "firebase-admin": "13.2.0",
     "moment": "2.30.1",
     "striptags": "^3.2.0",
@@ -30,7 +30,7 @@
     "undici": "^7"
   },
   "devDependencies": {
-    "@types/node": "^20.8.6",
+    "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.49.0",
@@ -39,7 +39,7 @@
     "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "trustedDependencies": [
     "protobufjs",
