--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "compile": "rimraf dist && tsc",
     "reinstall": "rimraf node_modules && bun install",
-    "start-js": "bun run compile && node ./dist/index.js",
     "start": "tsx index.ts",
     "stop": "pm2 stop EMCS",
-    "reload": "pm2 startOrGracefulReload --attach ecosystem.json",
-    "restart": "bun run reinstall && pm2 startOrRestart ecosystem.json",
+    "reload": "pm2 startOrGracefulReload --attach ecosystem.json --env production",
+    "restart": "bun run reinstall && pm2 startOrRestart ecosystem.json --env production",
     "watch": "pm2 start --attach ecosystem.json --watch",
     "deploy": "pm2 deploy production"
   },
