an update or something
commit 97b2d664a4484daf3b2839ae1c0e7e120619cdbb
Author: O3H <owen77stubbs@gmail.com>
Date:   Fri Apr 4 08:22:14 2025 +0100

    store player stats in db

commit 913850e3b7860f2adb42892bcf57f083fe76dc8b
Author: O3H <owen77stubbs@gmail.com>
Date:   Fri Apr 4 07:17:19 2025 +0100

    Update playerstats.ts

commit ee7817d4e757f24cbef279d67ee61e7d68e4125c
Author: O3H <owen77stubbs@gmail.com>
Date:   Fri Apr 4 07:01:07 2025 +0100

    bump earthmc and fix `/location check`

commit 6aa8c17780ed8cc50e909881ac8cdafefeb4688f
Author: O3H <owen77stubbs@gmail.com>
Date:   Thu Apr 3 07:12:31 2025 +0100

    we jus codin

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "stop": "pm2 stop EMCS",
     "reload": "pm2 startOrGracefulReload --attach ecosystem.json",
     "restart": "bun run reinstall && pm2 startOrRestart ecosystem.json",
+    "reload-dev": "pm2 startOrGracefulReload --attach ecosystem.json --env development",
+    "restart-dev": "bun run reinstall && pm2 startOrRestart ecosystem.json --env development",
     "watch": "pm2 start --attach ecosystem.json --watch",
     "deploy": "pm2 deploy production"
   },
@@ -18,7 +20,7 @@
     "@isaacs/ttlcache": "^1.4.1",
     "discord.js": "14.18.0",
     "dotenv": "^16.4.7",
-    "earthmc": "^10.1.2",
+    "earthmc": "^10.3.1",
     "firebase": "11.5.0",
     "firebase-admin": "13.2.0",
     "moment": "2.30.1",
